<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filters_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/radius_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters_dialog_radius"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radius_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/aqi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters_dialog_min_aqi"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/aqi_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>