<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filters_item"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter_menu_item"
        app:showAsAction="ifRoom" />
</menu>